eb_core/src/parser/snapshots/eb_core__parser__expr__test__parse5.snap
---
source: src/parser/expr.rs
expression: "parse(&mut ctx).expect(\"fail to parse\")"

---
Node {
    kind: Call(
        Node {
            kind: Ident(
                "f",
            ),
            loc: Location(
                0,
            ),
        },
        [],
    ),
    loc: Location(
        1,
    ),
}
